updates with 1.1.0 : - cleanup, using .gitignore - 2 new garbage free examples - ideafix_bench.sh no offers flag -g to start a garbage-free run - optimising benchmark parameters (no persisting of incoming messages, smaller pools for better cache locality)